--- a/style.css
+++ b/style.css
@@ -8,3 +8,47 @@ body {
     font-family: "Trebuchet MS", Helvetica, sans-serif;
     background: #e6e6e6;
 }
+
+/*
+**** Layout ****
+*/
+#area-cabecalho {
+    background-color: #f7b600;
+    padding: 15px;
+    text-align: center;
+}
+
+#area-logo, #area-menu {
+    padding: 10px;
+
+}
+
+/*
+**** Formatação do menu ****
+*/
+
+a {
+    text-decoration: none;
+}
+
+a:link, a:visited {
+    color: #FFF;
+    padding: 8px 12px;
+}
+
+a:hover {
+    color: #f7b600;
+    background: #FFF;
+}
+
+/*
+**** Formatações em geral ****
+*/
+h1 {
+    color: #4e4d4e;
+    font-size: 2.5em;
+}
+
+.branco {
+    color: white;
+}
